test/spec_vectors/select/fail/module_26.wat
(module (func $type-2nd-operand-empty-in-then (i32.const 0) (i32.const 0) (if (then (i32.const 0) (select) (drop)))))